fixed gap on all products button

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -23,6 +23,7 @@
 .options form {
     display: flex;
     flex-direction: column;
+    gap: 0;
 }
 .options button {
     font-size: 1.5rem;
